Properly identify checks, draws, add perpetual check